# FireSky

./: .gitignore  CMakeLists.txt  FireSky.sln  FireSky.vcxproj  FireSky.vcxproj.filters  README.md
resources/: Highscores.txt
src/: Appstate.cpp  Appstate.h  Elements.cpp  Elements.h  Entity.cpp  Entity.h  GameOver.cpp  GameOver.h  Ingame.cpp  Ingame.h  MainMenu.cpp  MainMenu.h  PauseMenu.cpp  PauseMenu.h  Render.cpp  Render.h  graphics.cpp  graphics.h  main.cpp  main.h
